# pipxFlask

./: .gitignore  README.md  pyproject.toml
pipx_flask/: main.py
